samples/_failures_safe/1761207746_42c31a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a24aff16.c: In function ‘main’:
./samples/SAFE/__tmp_a24aff16.c:150:5: error: expected declaration or statement at end of input
  150 |     result = matrix_multiply(&mat1, &mat2);
      |     ^~~~~~
